--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -83,6 +83,7 @@
 		                            </div>
 		                        </div>
 		                    </div>
+							
 		                </div>
 		            </div>
 		        </div>
@@ -104,100 +105,100 @@
 
 
 
-                    <!-- <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingOne">
-                            <h4 class="panel-title">
-                				<a role="button" data-toggle="collapse in" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Recent Match Stats
-                				</a>
-            				</h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                            <div class="panel-body">
-                                <h4>Slide Title</h4>
-                            </div>
-                        </div>
-                    </div> -->
-<!-- 	    		<div class="col-sm-4 text-left">
-					<h3 class="panel-title">Your Trending Champs</h3>
-					<hr>
-					<div class="row">
-						<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
-						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-					</div>
+//                     <!-- <div class="panel panel-default">
+//                         <div class="panel-heading" role="tab" id="headingOne">
+//                             <h4 class="panel-title">
+//                 				<a role="button" data-toggle="collapse in" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Recent Match Stats
+//                 				</a>
+//             				</h4>
+//                         </div>
+//                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+//                             <div class="panel-body">
+//                                 <h4>Slide Title</h4>
+//                             </div>
+//                         </div>
+//                     </div> -->
+// <!-- 	    		<div class="col-sm-4 text-left">
+// 					<h3 class="panel-title">Your Trending Champs</h3>
+// 					<hr>
+// 					<div class="row">
+// 						<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
+// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
+// 					</div>
 					
-					<div class="row">
-						<div class="col-sm-3 col-sm-offset-1">
-							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
-						</div>
-						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-					</div>
+// 					<div class="row">
+// 						<div class="col-sm-3 col-sm-offset-1">
+// 							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
+// 						</div>
+// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
+// 					</div>
 					
-					<div class="row">
-						<div class="col-sm-3 col-sm-offset-1">
-							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
-						</div>
-						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-					</div>	
-					<br>
+// 					<div class="row">
+// 						<div class="col-sm-3 col-sm-offset-1">
+// 							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
+// 						</div>
+// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
+// 					</div>	
+// 					<br>
 
-				</div> -->
+// 				</div> -->
 
-				<!--CODE FOR AN IMAGE CAROUSEL -->
-		                   <!--  <div class="panel panel-default">
-		                        <div class="panel-heading" role="tab" id="headingTwo">
-		                			<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-		                				<h4 class="panel-title">Your Favorite Champs</h4>
-		                			</a>
-		                        </div>
-		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-		                            <div class="panel-body">		                            	
+// 				<!--CODE FOR AN IMAGE CAROUSEL -->
+// 		                   <!--  <div class="panel panel-default">
+// 		                        <div class="panel-heading" role="tab" id="headingTwo">
+// 		                			<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+// 		                				<h4 class="panel-title">Your Favorite Champs</h4>
+// 		                			</a>
+// 		                        </div>
+// 		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+// 		                            <div class="panel-body">		                            	
 		     
-		          	<div class="row">
-												<div id="favorite-champ-carousel" class="carousel slide" data-ride="carousel"> -->
-												  <!-- Indicators -->
-													<!-- <ol class="carousel-indicators">
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="0" class="active"></li>
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="1"></li>
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="2"></li>
-												    </ol> -->
+// 		          	<div class="row">
+// 												<div id="favorite-champ-carousel" class="carousel slide" data-ride="carousel"> -->
+// 												  <!-- Indicators -->
+// 													<!-- <ol class="carousel-indicators">
+// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="0" class="active"></li>
+// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="1"></li>
+// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="2"></li>
+// 												    </ol> -->
 
-												  <!-- Wrapper for slides -->
-							<!-- 					  	<div class="carousel-inner" role="listbox">
+// 												  <!-- Wrapper for slides -->
+// 							<!-- 					  	<div class="carousel-inner" role="listbox">
 												    
-												    	<div class="item active">
-															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
+// 												    	<div class="item active">
+// 															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
 								    	
-													    	<div class="carousel-caption"></div>
-												    	</div>
+// 													    	<div class="carousel-caption"></div>
+// 												    	</div>
 
-												    	<div class="item">
-															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
-													    	<div class="carousel-caption"></div>
-												    	</div>
-													</div>
- -->
-												<!-- Controls -->
-									<!-- 			<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
-												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-												  <span class="sr-only">Previous</span>
-												</a>
-												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
-												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-												  <span class="sr-only">Next</span>
-												</a>
-											</div>
-		                            	</div>
+// 												    	<div class="item">
+// 															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
+// 													    	<div class="carousel-caption"></div>
+// 												    	</div>
+// 													</div>
+//  -->
+// 												<!-- Controls -->
+// 									<!-- 			<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
+// 												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+// 												  <span class="sr-only">Previous</span>
+// 												</a>
+// 												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
+// 												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+// 												  <span class="sr-only">Next</span>
+// 												</a>
+// 											</div>
+// 		                            	</div>
 
 
-		                            	<div class="row">
-											<div class="container-fluid">
-												<div class="col-sm-12 text-right">
+// 		                            	<div class="row">
+// 											<div class="container-fluid">
+// 												<div class="col-sm-12 text-right">
 												
 										
-												</div>
-											</div>
-										</div>
-		                            </div>
-		                        </div> --> <!--a carousel to display the favorites list possibly  -->
-		                  <!--   </div> -->
+// 												</div>
+// 											</div>
+// 										</div>
+// 		                            </div>
+// 		                        </div> --> <!--a carousel to display the favorites list possibly  -->
+// 		                  <!--   </div> -->
 
