--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -32,7 +32,7 @@
 		<div class="row">
 			<div class=" col-xs-12 col-md-10 col-md-offset-1">
 				<% if (currentUser) { %>
-					<h5 id="current_User"> <%= thisUser %> </h5>
+					<h5 class="current_User"> <%= thisUser %> </h5>
 				<% }else{ %>
 					<h5>Champions</h5>
 				<% } %>	
