--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,84 +9,87 @@
 
 
 <div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
+
+<% if(currentUser) { /%>
+	<h5 class="current_User"> <%= thisUser %> </h5>
+<% } %>
+
+
+
 	<div class="col-xs-10 col-xs-offset-1 col-md-10 col-md-offset-1">
 		<div class="accordion-wrapper">
 			<div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+				<div class="panel panel-default">
+					<div class="panel-heading" role="tab" id="headingThree">
+					<div class="row">
+						<h4 class="panel-title">
+							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Your Favorite Champs</a>
+							<div  class="text-right">
+								<% if(currentUser) {%>
+									<a href= "../champions"> 
+										<button id='add-champ-button' class= "btn btn-alert btn-xs">Logged in Add Champions
+										</button>
+									</a>
 
-		                    <div class="panel panel-default">
-		                        <div class="panel-heading" role="tab" id="headingThree">
-                				<div class="row">
-		                            <h4 class="panel-title">
-		                				<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Your Favorite Champs
-		                				</a>
-										<div  class="text-right">
-												
-											<% if(currentUser) {%>
-												<a href= "../champions"> 
-													<button id='add-champ-button' class= "btn btn-alert btn-xs">Logged in Add Champions
-													</button>
-												</a>
+								<% } else { %>
+									<a href="../champions">
+										<button class="btn btn-default btn-xs">Add Champions
+										</button>
+									</a>
+								<% } %>
 
-											<% } else { %>
-        										<a href="../champions">
-        											<button class="btn btn-default btn-xs">Add Champions
-        											</button>
-        										</a>
-											<% } %>
-
+							</div>
+						</h4>
+					</div>
+					</div>
+					<div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
+						<div class="panel-body">
+								<ul id="favorite_list" class='list-group'>
+								<% if(currentUser) { %>
+								
+								<% var myFavs = currentUser.favorites %>
+								<% for(var i = 0; i < myFavs.length; i++) { %>
+								
+									<li class="favorite-list-item list-group-item">
+										<div class='row container-fluid'>
+											<div class="col-xs-3 text-left">
+												<div class="container img-frame">
+													<img class="img img-thumbnail img-responsive" 
+													src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
+												</div>
+											</div>
+											<div class="col-xs-3 text-center">
+													<%= myFavs[i].title %>
+											</div>
+											<div class="col-xs-3 text-center">
+													<%= myFavs[i].key %>
+											</div>
+											<div class="col-xs-1">
+													<button class="remove-favorite btn btn-defaul btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
+											</div>
 										</div>
-		            				</h4>
-		                        </div>
-		                        </div>
-		                        <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
-		                            <div class="panel-body">
-		                                	<ul id="favorite_list" class='list-group'>
-		                                	<% if(currentUser) { %>
-											
-											<% var myFavs = currentUser.favorites %>
-											<% for(var i = 0; i < myFavs.length; i++) { %>
-											
-												<li class="favorite-list-item list-group-item">
-													<div class='row container-fluid'>
-														<div class="col-xs-3 text-left">
-															<div class="container img-frame">
-																<img class="img img-thumbnail img-responsive" 
-																src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
-															</div>
-														</div>
-														<div class="col-xs-3 text-center">
-																<%= myFavs[i].title %>
-														</div>
-														<div class="col-xs-3 text-center">
-																<%= myFavs[i].key %>
-														</div>
-														<div class="col-xs-1">
-																<button class="remove-favorite btn btn-defaul btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
-														</div>
-													</div>
-												</li>
-												
-											<% } %>
-                                			<% } %>
-		                                	<!--ADD CHAMPIONS TO LIST HERE -->
-		                                	
-		                                	</ul>
-		                                </div>
-		                            </div>
-		                        </div>
-		                    </div>
-							
-		                </div>
-		            </div>
-		        </div>
-		
-			<div class="container col-sm-4">
-				<div class="wrapper">
-					<img class='img img-responsive' src="#">
-				</div>
+									</li>
+									
+								<% } %>
+								<% } %>
+								<!--ADD CHAMPIONS TO LIST HERE -->
+								
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>			
 			</div>
 		</div>
-	<hr>
+	</div>
+
+	<div class="container col-sm-4">
+		<div class="wrapper">
+			<img class='img img-responsive' src="#">
+		</div>
+	</div>
+</div>
+
 
 
 
