renames the item model and updates in files

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,18 +5,23 @@
 
 <div id="landingContainer" class="container-fluid">
   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-
     <div id="landingContent" class="col-xs-12 col-md-8 col-md-offset-2 container">
-      <div class="row container-fluid">
-      <div class="col-summnr-container">
-      </div>
-      </div>
-      <div class="landing-button-container container col-xs-12">
-        <a href="/login"><button class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
-        <a href="/signup"><button class="col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2  btn-md btn btn-default">Register</button></a>
-        </div>
+    
+    <div class="row container-fluid">
+      <div class="league-container"></div>
+    </div>
+
+    <div class="row container-fluid">
+      <div class="summnr-container"></div>
+    </div>
+
+    <div class="landing-button-container container col-xs-12">
+      <a href="/login"><button class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
+      <a href="/signup"><button class="col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2  btn-md btn btn-default">Register</button></a>
+    </div>
+
     </div> 
-</div>
+  </div>
 </div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
