adds league-container to landing and applies same styles as summnr.ui

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -155,7 +155,8 @@ div.landing {
     color: rgba(255, 201, 114, 1.0);
 }
 
-.summnr-container {
+.summnr-container,
+.league-container {
     position: relative;
     z-index: 100;
     height: 40px;
