--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,17 +7,22 @@
   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
     <div id="landingContent" class="col-xs-12 col-md-8 col-md-offset-2 container">
     
-    <div class="row container-fluid">
-      <div class="league-container"></div>
+      <div class="row">
+        <div class="league-container col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3"><img class='img img-responsive' src='/images/league_logo.png'></div>
+      </div>
+
+    <div class='row'>
+      <div class="summnr-container col-xs-4 col-xs-offset-4"><img class='img img-responsive' src='/images/summnr_ui.png'></div>
     </div>
 
-    <div class="row container-fluid">
-      <div class="summnr-container"></div>
-    </div>
-
+    
     <div class="landing-button-container container col-xs-12">
-      <a href="/login"><button class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
-      <a href="/signup"><button class="col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2  btn-md btn btn-default">Register</button></a>
+      <div class='row'>
+        <a href="/login"><button class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
+      </div>
+      <div class='row'>
+        <a href="/signup"><button class="col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2  btn-md btn btn-default">Register</button></a>
+      </div>
     </div>
 
     </div> 
