--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -3,7 +3,7 @@
 <% } %>
 
 
-<div class="panel panel-default">
+<div class="well well-large">
 	<div class="panel-body container">
 		<form method="get" action="/profile/summonner">		
 			
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		
-		<div id=champion_backframe container-fluid>
+		<div id=champion_backframe well>
 			<div class="row">
 			<!--Where Champs Go-->
 				<div id='champions'>
