--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,22 +51,21 @@
 								<% var myFavs = currentUser.favorites %>
 								<% for(var i = 0; i < myFavs.length; i++) { %>
 								
-									<li class="favorite-list-item list-group-item">
-										<div class='row container-fluid'>
+									<li class="<%= myFavs[i].key%> champion favorite-list-item list-group-item">
+										<div class='row'>	
 											<div class="col-xs-3 text-left">
-												<div class="container img-frame">
-													<img class="img img-thumbnail img-responsive" 
-													src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
+												<div class="container col-xs-8">
+													<div class='favorite-image-wrapper'>
+														<button class="remove-favorite btn btn-defaul btn-sm"><span alt='Remove Favorite' class="glyphicon glyphicon-trash"></span></button>
+														<img class="img img-responsive" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
+													</div>
 												</div>
 											</div>
-											<div class="col-xs-3 text-center">
+											<div class="col-xs-offset-1 col-xs-2 text-center ">
 													<%= myFavs[i].title %>
 											</div>
-											<div class="col-xs-3 text-center">
-													<%= myFavs[i].key %>
-											</div>
-											<div class="col-xs-1">
-												<button class="remove-favorite btn btn-defaul btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
+											<div class="col-xs-2 text-center">
+													<%= myFavs[i].name %>
 											</div>
 										</div>
 									</li>
