--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,179 +1,193 @@
-body {
-    background: #151F24;
-}
-
-div.landing {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-}
-
-#landingContainer {
-    position: relative;
-    padding: none;
-    margin: none;
-    background-image: url('../images/landingBackground.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 650px;
-}
-
-#landingContent {
-    position: relative;
-    border: 2px solid #B29B5C;
-    ;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 50px 0;
-    top: 50px;
-}
-
-#landingContent button {
-    font-family: 'Asul', sans-serif;
-    background: #151F24;
-    color: #FFF;
-    transition: all 700ms;
-}
-
-#landingContent button:hover {
-    background: #151F24;
-    color: rgba(255, 201, 114, 1.0);
-    transition: all 1500ms;
-}
-
-.summnr-container {
-    margin-bottom: 40px;
-}
-
-#nav {
-    background: #151F24;
-    color: rgba(255, 201, 114, 1.0);
-    font-family: 'Asul', sans-serif;
-    font-weight: 400;
-    border: none;
-}
-
-#nav li a {
-    text-decoration: none;
-    color: #FFF;
-    transition: all 1500ms;
-}
-
-#nav li a:hover {
-    transition: all 1500ms;
-    color: #B29B5C;
-}
-
-
-/*PAGE STYLES*/
-
-.page-wrapper {
-    position: relative;
-    padding: none;
-    margin: none;
-    background-image: url('../images/landingBackground.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 650px;
-}
-
-.page-title {
-    font-family: 'Asul', sans-serif;
-    font-weight: 700;
-    color: #B29B5C;
-}
-
-.current_User {
-    color: transparent;
-}
-
-.authentication-page {
-    position: relative;
-    border: 2px solid #B29B5C;
-    ;
-    background: rgba(0, 0, 0, 0.7);
-    padding-top: 150px;
-    padding-bottom: 150px;
-    top: 50px;
-}
-
-.authentication-submit-button {
-    font-family: 'Asul', sans-serif;
-    background: #151F24;
-    color: #FFF;
-    transition: all 1500ms;
-}
-
-.authentication-submit-button:hover {
-    background: #151F24;
-    color: #B29B5C;
-    transition: all 1500ms;
-}
-
-
-/*PROFILE*/
-
-#add-champ-button {
-    display: inline-block;
-    font-family: 'Asul', sans-serif;
-    background: #151F24;
-    color: #FFF;
-    transition: all 1500ms;
-}
-
-#add-champ-button:hover {
-    color: #B29B5C;
-}
-
-
-/*FAVORITE-LIST*/
-
-.remove-favorite {
-    position: absolute;
-    top: 0px;
-    left: 13px;
-    background: transparent;
-    color: transparent;
-    transition: all ease-in 500ms;
-}
-
-.favorite-image-wrapper:hover .remove-favorite {
-    background: rgba(0, 0, 0, 0.2);
-    color: rgba(255, 201, 114, 1.0);
-    transition: all ease-out 500ms;
-}
-
-.champion-name {
-    font-family: 'Asul', sans-serif;
-    font-weight: 700;
-    color: #151F24;
-    font-size: 2em;
-}
-
-.champion-title {
-    font-family: 'Lato', sans-serif;
-    color: #151F24;
-}
-
-#champion_backframe {
-    background: rgba(22, 32, 36, 0.6);
-}
-
-.modal-body {
-    background: rgba(21, 31, 36, .8);
-}
-
-.modal-body-content {
-    font-family: 'Lato', sans-serif;
-    color: #FFF;
-}
-
-#footer {
-    background: rgba(22, 32, 36, 0.6);
-    color: rgba(255, 201, 114, 1.0);
-    font-family: 'Asul', sans-serif;
-    font-weight: 400;
-    border: none;
-    margin-top: 25px;
-    height: 25px;
-}
+    body {
+        background: #151F24;
+    }
+    
+    div.landing {
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #landingContainer {
+        position: relative;
+        padding: none;
+        margin: none;
+        background-image: url('../images/landingBackground.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 650px;
+    }
+    
+    #landingContent {
+        position: relative;
+        border: 2px solid #B29B5C;
+        ;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 50px 0;
+        top: 50px;
+    }
+    
+    #landingContent button {
+        font-family: 'Asul', sans-serif;
+        background: #151F24;
+        color: #FFF;
+        transition: all 700ms;
+    }
+    
+    #landingContent button:hover {
+        background: #151F24;
+        color: rgba(255, 201, 114, 1.0);
+        transition: all 1500ms;
+    }
+    
+    .summnr-container {
+        margin-bottom: 40px;
+    }
+    
+    #nav {
+        background: #151F24;
+        color: rgba(255, 201, 114, 1.0);
+        font-family: 'Asul', sans-serif;
+        font-weight: 400;
+        border: none;
+    }
+    
+    #nav li a {
+        text-decoration: none;
+        color: #FFF;
+        transition: all 1500ms;
+    }
+    
+    #nav li a:hover {
+        transition: all 1500ms;
+        color: #B29B5C;
+    }
+    /*PAGE STYLES*/
+    
+    .page-wrapper {
+        position: relative;
+        padding: none;
+        margin: none;
+        background-image: url('../images/landingBackground.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 650px;
+    }
+    
+    .page-title {
+        font-family: 'Asul', sans-serif;
+        font-weight: 700;
+        color: #B29B5C;
+    }
+    
+    .current_User {
+        color: transparent;
+    }
+    
+    .authentication-page {
+        position: relative;
+        border: 2px solid #B29B5C;
+        ;
+        background: rgba(0, 0, 0, 0.7);
+        padding-top: 150px;
+        padding-bottom: 150px;
+        top: 50px;
+    }
+    
+    .authentication-submit-button {
+        font-family: 'Asul', sans-serif;
+        background: #151F24;
+        color: #FFF;
+        transition: all 1500ms;
+    }
+    
+    .authentication-submit-button:hover {
+        background: #151F24;
+        color: #B29B5C;
+        transition: all 1500ms;
+    }
+    /*PROFILE*/
+    
+    #add-champ-button {
+        display: inline-block;
+        font-family: 'Asul', sans-serif;
+        background: #151F24;
+        color: #FFF;
+        transition: all 1500ms;
+    }
+    
+    #add-champ-button:hover {
+        color: #B29B5C;
+    }
+    /*FAVORITE-LIST*/
+    
+    .remove-favorite {
+        position: absolute;
+        top: 0px;
+        left: 13px;
+        background: transparent;
+        color: transparent;
+        transition: all ease-in 500ms;
+    }
+    
+    .favorite-image-wrapper:hover .remove-favorite {
+        background: transparent;
+        color: rgba(255, 201, 114, 1.0);
+        transition: all ease-out 500ms;
+    }
+    
+    .champion-name {
+        font-family: 'Asul', sans-serif;
+        font-weight: 700;
+        color: #151F24;
+        font-size: 2em;
+    }
+    
+    .champion-title {
+        font-family: 'Lato', sans-serif;
+        color: #151F24;
+    }
+    
+    #champion_backframe {
+        background: rgba(22, 32, 36, 0.6);
+    }
+    
+    .modal-body {
+        background: rgba(21, 31, 36, .8);
+    }
+    
+    .modal-body-content {
+        font-family: 'Lato', sans-serif;
+        color: #FFF;
+    }
+    
+    .fav-input-group {
+        background: rgba(0, 0, 0, 0.5);
+        ;
+        position: absolute;
+        width: 80%;
+        margin: 0 auto;
+        bottom: 0px;
+    }
+    
+    #addToFavs {
+        color: rgba(192, 44, 62, 0.4);
+        background: rgba(0, 0, 0, 0.4);
+        border: none;
+        transition: all ease 350ms;
+    }
+    
+    #addToFavs:hover {
+        color: rgba(255, 59, 82, 1.0);
+    }
+    
+    #footer {
+        background: rgba(22, 32, 36, 0.6);
+        color: rgba(255, 201, 114, 1.0);
+        font-family: 'Asul', sans-serif;
+        font-weight: 400;
+        border: none;
+        margin-top: 25px;
+        height: 25px;
+    }
