--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -3,29 +3,29 @@
 <% } %>
 
 
-<div class="well well-large">
-	<div class="panel-body container">
-		<form method="get" action="/profile/summonner">		
+// <div class="well well-large">
+// 	<div class="panel-body container">
+// 		<form method="get" action="/profile/summonner">		
 			
-			<div class="form-group col-sm-6">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-default">Go</button>
-				    </span>
-				    <input class="form-control" type="text" name="list-item" placeholder="Search by name">
-				</div>
-		    </div>
+// 			<div class="form-group col-sm-6">
+// 				<div class="input-group">
+// 					<span class="input-group-btn">
+// 						<button class="btn btn-default">Go</button>
+// 				    </span>
+// 				    <input class="form-control" type="text" name="list-item" placeholder="Search by name">
+// 				</div>
+// 		    </div>
 				
-			<div class="form-group col-sm-6">
-				<div class="input-group">
-				<span class="label label-default">label</span> 
-				<input type="checkbox" name="Search">
-				</div>
-			</div>
+// 			<div class="form-group col-sm-6">
+// 				<div class="input-group">
+// 				<span class="label label-default">label</span> 
+// 				<input type="checkbox" name="Search">
+// 				</div>
+// 			</div>
 
-		</form>
-	</div>
-</div>
+// 		</form>
+// 	</div>
+// </div>
 
 <section id="champion_container" class="container">
 	<div class="container-fluid">
