--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,11 +8,10 @@
 <% } %>
 
 
-<div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
+// <div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
 
 <% if(currentUser) { %>
-	<% var thisUser = currentUser._id %>
-	<h5 class="current_User"> <%= thisUser %> </h5>
+	<h5 class="current_User"> <%= currentUser._id %> </h5>
 <% } %>
 
 
@@ -26,16 +25,10 @@
 						<h4 class="panel-title">
 							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Your Favorite Champs</a>
 							<div  class="text-right">
-								<% if(currentUser) {%>
-									<a href= "../champions"> 
-										<button id='add-champ-button' class= "btn btn-alert btn-xs">Logged in Add Champions
-										</button>
-									</a>
 
-								<% } else { %>
-									<a href="../champions">
-										<button class="btn btn-default btn-xs">Add Champions
-										</button>
+								<% if(currentUser) { %>
+									<a href= "../champions"> 
+										<button id='add-champ-button' class= "btn btn-alert btn-xs">Logged in Add Champions</button>
 									</a>
 								<% } %>
 
@@ -46,32 +39,38 @@
 					<div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
 						<div class="panel-body">
 								<ul id="favorite_list" class='list-group'>
-								<% if(currentUser) { %>
+
+									<li class='champion favorite-list-item list-group-item'>
+										<div class='row'>
 								
-								<% var myFavs = currentUser.favorites %>
-								<% for(var i = 0; i < myFavs.length; i++) { %>
-								
-									<li class= ' <%= myFavs[i].key %> champion favorite-list-item list-group-item'>
-										<div class='row'>	
+											<% if(currentUser) { %>
+												<% var userFavs = currentUser.favorites %>
+												<% userFavs.forEach(function(favorite) {%>
+													<li> <%= userFavs._id %> </li>
+												<% }) %>
+												
+
+											<% } %>
+
 											<div class="col-xs-3 text-left">
 												<div class="container col-xs-8">
 													<div class='favorite-image-wrapper'>
 														<button class="remove-favorite btn btn-defaul btn-sm"><span alt='Remove Favorite' class="glyphicon glyphicon-trash"></span></button>
-														<img class="img img-responsive" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
 													</div>
 												</div>
 											</div>
-											<div class="col-xs-offset-1 col-xs-2 text-center ">
-													<%= myFavs[i].title %>
+											<div class= "col-xs-2 col-xs-offset-1  text-center">
+												
+
 											</div>
 											<div class="col-xs-2 text-center">
-													<%= myFavs[i].name %>
+
 											</div>
 										</div>
 									</li>
 									
-								<% } %>
-								<% } %>
+							
+
 								<!--ADD CHAMPIONS TO LIST HERE -->
 								
 								</ul>
@@ -82,111 +81,4 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
     <% include ./partials/footer %>
-
-
-
-
-
-
-//                     <!-- <div class="panel panel-default">
-//                         <div class="panel-heading" role="tab" id="headingOne">
-//                             <h4 class="panel-title">
-//                 				<a role="button" data-toggle="collapse in" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Recent Match Stats
-//                 				</a>
-//             				</h4>
-//                         </div>
-//                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-//                             <div class="panel-body">
-//                                 <h4>Slide Title</h4>
-//                             </div>
-//                         </div>
-//                     </div> -->
-// <!-- 	    		<div class="col-sm-4 text-left">
-// 					<h3 class="panel-title">Your Trending Champs</h3>
-// 					<hr>
-// 					<div class="row">
-// 						<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
-// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-// 					</div>
-					
-// 					<div class="row">
-// 						<div class="col-sm-3 col-sm-offset-1">
-// 							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
-// 						</div>
-// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-// 					</div>
-					
-// 					<div class="row">
-// 						<div class="col-sm-3 col-sm-offset-1">
-// 							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
-// 						</div>
-// 						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-// 					</div>	
-// 					<br>
-
-// 				</div> -->
-
-// 				<!--CODE FOR AN IMAGE CAROUSEL -->
-// 		                   <!--  <div class="panel panel-default">
-// 		                        <div class="panel-heading" role="tab" id="headingTwo">
-// 		                			<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-// 		                				<h4 class="panel-title">Your Favorite Champs</h4>
-// 		                			</a>
-// 		                        </div>
-// 		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-// 		                            <div class="panel-body">		                            	
-		     
-// 		          	<div class="row">
-// 												<div id="favorite-champ-carousel" class="carousel slide" data-ride="carousel"> -->
-// 												  <!-- Indicators -->
-// 													<!-- <ol class="carousel-indicators">
-// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="0" class="active"></li>
-// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="1"></li>
-// 												    	<li data-target="#favorite-champ-carousel" data-slide-to="2"></li>
-// 												    </ol> -->
-
-// 												  <!-- Wrapper for slides -->
-// 							<!-- 					  	<div class="carousel-inner" role="listbox">
-												    
-// 												    	<div class="item active">
-// 															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
-								    	
-// 													    	<div class="carousel-caption"></div>
-// 												    	</div>
-
-// 												    	<div class="item">
-// 															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
-// 													    	<div class="carousel-caption"></div>
-// 												    	</div>
-// 													</div>
-//  -->
-// 												<!-- Controls -->
-// 									<!-- 			<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
-// 												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-// 												  <span class="sr-only">Previous</span>
-// 												</a>
-// 												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
-// 												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-// 												  <span class="sr-only">Next</span>
-// 												</a>
-// 											</div>
-// 		                            	</div>
-
-
-// 		                            	<div class="row">
-// 											<div class="container-fluid">
-// 												<div class="col-sm-12 text-right">
-												
-										
-// 												</div>
-// 											</div>
-// 										</div>
-// 		                            </div>
-// 		                        </div> --> <!--a carousel to display the favorites list possibly  -->
-// 		                  <!--   </div> -->
-
